# wg-page-backend

./: Cargo.toml  README.md  TODO  diesel.toml
migrations/2022-12-06-110454_users/: up.sql
migrations/2022-12-11-110435_shopping_items/: down.sql  up.sql
src/: args.rs  lib.rs  main.rs  models.rs  telemetry.rs
src/api/: api_errors.rs  mod.rs  shopping_items.rs  user.rs  utils.rs
src/db/: mod.rs  schema.rs
src/model/: mod.rs  schema.rs  shopping_items.rs  user.rs  user_errors.rs
src/ops/: user.rs
tests/: healthcheck.rs
