[package]
name = "wg-page-backend"
version = "0.1.0"
authors = ["HD <hannes-duerr@protonmail.com>"]
edition = "2021"
default-run = "wg-page-backend"

[[bin]]
name = "diktator"
path = "bin/diktator/main.rs"

[[bin]]
name = "diplomat"
path = "bin/diplomat/main.rs"

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.66"
chrono = "^0"
clap = { version = "4", features = ["derive"] }
derive_more = "0.99.17"
diesel = { version = "2", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
