[package]
name = "wg_page_backend"
version = "0.1.0"
authors = ["HD <hannes-duerr@protonmail.com>"]
edition = "2021"
default-run = "wg_page_backend"

[lib]
path = "src/lib.rs"

[[bin]]
name="wg_page_backend"
path="src/main.rs"

[[bin]]
name="diktator"
path="bin/diktator/main.rs"

[dependencies]
diesel = { version = "2", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "^0"
clap = { version = "4", features = ["derive"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
actix-web = "4.2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
derive_more = "0.99.17"
anyhow = "1.0.66"
jsonwebtoken = "8.2.0"
argon2 = { version = "0.4.1", features= ["std"]}
rand_core = { version = "0.6", features = ["std"] }
thiserror = "1.0.38"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

[dev-dependencies]
reqwest = "0.11"
